Bulma for the detailed page. A card with name, calories total, activity to burn, image, and ingredients. Image source is from the Api object. Issue with title name not showing more than one word. Need to discuss during group meeting.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -42,3 +42,20 @@
 #clearList {
     margin: 20px 0px;
 }
+
+.card {
+    max-width: 80%;
+    margin: 0px 10%;
+}
+
+.card-image {
+    margin: 5%;
+}
+
+h4 {
+    padding-left: 1rem;
+}
+
+#drinkIngredients {
+    padding-bottom: 5%;
+}
